--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  background-color: #359C70;
   overflow-x: hidden;
 }
 /* LOGIN PAGE */
@@ -78,7 +79,7 @@ nav {
   display: flex;
   width: 100vw;
   align-items: center;
-  background-color: #FCC139;
+  background-color: #1764AB;
   color: white;
   padding: 10px;
   justify-content: space-between;
@@ -111,11 +112,14 @@ nav {
 
 .nav-right button {
   cursor: pointer;
-  background-color: #FAF0CA;
+  background-color: #40B886;
   padding: 5px 20px;
   border: none;
   border-radius: 5px;
   height: 30px;
+  color: #fff;
+  justify-content: center;
+  text-align: center;
 }
 
 /* todo-container */
@@ -259,7 +263,7 @@ nav {
 }
 
 h1, h2, h3 {
-  color: #5E6F7F;
+  color: #fff;
 }
 
 h4 {
@@ -285,7 +289,6 @@ h4 {
 .frame-book {
   height: 250px;
   width: 100%;
-  background-color: #f0f;
   margin: auto;
 }
 
@@ -294,31 +297,64 @@ h4 {
   float: left;
   width: 20%;
   height: 100%;
-  background-color: #FCC139;
   align-items: center;
   justify-content: center;
+  border-radius: 10px;
+  margin-right: 10px;
 }
 
 .details-book {
   width: 100%;
   height: 100%;
-  background-color: #498AF8;
 }
 
 .title-book {
   width: 100%;
   height: 20%;
-  background-color: #5E6F7F;
 }
 
 .author-book {
   width: 100%;
   height: 30%;
-  background-color: aquamarine;
 
 }
 .summary-book {
   width: 100%;
   height: 50%;
   background-color: blueviolet;
+}
+
+.desc-book {
+  word-wrap: break-word;
+}
+
+.footer {
+  width: 100%;
+  height: 150px;
+  background-color: #0d3b66;
+  margin-top: 15px;
+  color: white;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.gray {
+  color: gray
+}
+
+.book-left h2 {
+  margin-top: 20px;
+  color: #fff;
+  margin-bottom: 20px;
+  margin-left: 20px;
+}
+
+.book-container {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.plus-image {
+  padding-left: 600px;
+  padding-top: 27px;
 }
